--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -17,6 +17,7 @@ html,#root,body {
   height: 100%;         
   width: 100%;  
     background-color: #f0f2f5;
+    overflow: hidden;
 }
 
 h1 {
