--- a/packages/client/src/layouts/Layout.css
+++ b/packages/client/src/layouts/Layout.css
@@ -9,7 +9,8 @@
   box-sizing: border-box;
   flex: 1;
   background-color: #f0f2f5;
-  /* overflow: scroll; */
+  overflow-y: hidden;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 1fr; /* Single column layout */
   flex-direction: column;
